# beacon-kb

./: .dockerignore  .gitignore  DESIGN_SPEC.md  Dockerfile  EPICS.md  EPICS_V2.md  FOCUS_CHAIN.md  FOCUS_CHAIN_V2.md  IMPL_PLANS.md  IMPL_PLANS_V2.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.superpowers/sdd/: epic03-v2-branch-review-fixes-report.md
docs/superpowers/specs/: 2026-07-23-beacon-industry-standard-rag-design.md
src/beacon/: __init__.py  config.py  errors.py  models.py  problems.py
src/beacon/answer/: __init__.py  abstention.py  citations.py  generate.py  prompts.py
src/beacon/evals/: __init__.py
src/beacon/ingest/: __init__.py  chunking.py  embeddings.py  fingerprint.py  parsing.py  planner.py  sync.py
src/beacon/ingest/connectors/: __init__.py  base.py  folder.py  web.py
src/beacon/investigate/: __init__.py
src/beacon/retrieval/: __init__.py  evidence.py  filters.py  hybrid.py  pipeline.py  rerank.py  snippets.py
src/beacon/server/: __init__.py  app.py  auth.py  error_handlers.py  telemetry.py
src/beacon/server/routes/: __init__.py  answer.py  collections.py  documents.py  health.py  search.py  sync.py
src/beacon/state/: __init__.py  _util.py  db.py  repo.py
src/beacon/state/migrations/: 0001_initial.sql  0002_single_live_index.sql  0003_sources_fk.sql  0004_revisions_physical_collection.sql  0005_sources_config.sql
src/beacon/storage/: __init__.py  lifecycle.py  payload.py  qdrant.py
src/beacon_kb/: __init__.py  cli.py  config.py  config_loader.py  errors.py  facade.py  models.py  progress.py  protocols.py  testing.py  tokens.py  version.py
src/beacon_kb/connectors/: __init__.py  filesystem.py  memory.py
src/beacon_kb/generation/: __init__.py  abstention.py  answer.py  citations.py  prompts.py
src/beacon_kb/indexing/: __init__.py  coordinator.py  embedding.py  manifest.py  validation.py
src/beacon_kb/ingestion/: __init__.py  chunking.py  enrichment.py  identity.py  media.py  planning.py  sync.py
src/beacon_kb/parsing/: __init__.py  base.py  html.py  markdown.py  pdf.py
src/beacon_kb/registry/: __init__.py  builtins.py  discovery.py  groups.py  precedence.py
src/beacon_kb/retrieval/: __init__.py  context.py  dense.py  diversity.py  filters.py  fusion.py  pipeline.py  query.py  rerank.py  snippets.py  sparse.py
src/beacon_kb/storage/: __init__.py  sqlite.py  vector_math.py
src/beacon_kb/storage/migrations/: 0001_initial.sql  0002_fts_columns.sql  __init__.py
tests/: conftest.py
tests/beacon/: conftest.py  fakes.py
tests/beacon/fixtures/corpus/: databases.md  kubernetes.md  ml.md  python.md
tests/beacon/fixtures/docs/: sample.docx  sample.html  sample.md
tests/beacon/integration/: conftest.py  test_collections_api.py  test_documents_api.py  test_e2e_smoke.py  test_filter_enforcement.py  test_fingerprint_migration.py  test_grounded_answer.py  test_hybrid_retrieval.py  test_parsing.py  test_qdrant_lifecycle.py  test_search_answer_api.py  test_server_skeleton.py  test_state_repo.py  test_sync_lifecycle.py  test_sync_rollback.py  test_sync_transient_fetch_failure.py  test_web_connector.py
tests/beacon/unit/: test_abstention_prompts_citations.py  test_auth.py  test_chunk_payload_mapping.py  test_chunking.py  test_config.py  test_config_knob_wiring.py  test_evidence_assembly.py  test_evidence_text_field.py  test_folder_connector.py  test_payload_schema.py  test_pipeline_standalone.py  test_problems.py  test_rerank.py  test_snippets.py  test_source_repo_config.py  test_sparse_floor_missing_collection.py  test_state_migrations.py  test_sync_error_responses.py  test_url_normalization.py  test_web_dedup.py
tests/contract/: test_embedding_provider_contract.py  test_knowledge_store_contract.py  test_pyproject_groups_sync.py  test_registry_contract.py  test_source_connector_contract.py
tests/fixtures/documents/: sample.md
tests/integration/: __init__.py  test_corpus_health.py  test_fingerprint_migration.py  test_grounded_answer.py  test_multi_source_concurrency.py  test_retrieval_pipeline.py  test_sync_chunks_deleted.py  test_sync_embedder_miscount.py  test_sync_enrichment_policy.py  test_sync_lifecycle.py  test_sync_rollback.py  test_sync_transient_fetch_failure.py
tests/plugins/: test_sample_plugin_discovery.py
tests/plugins/sample_plugin/: pyproject.toml
tests/plugins/sample_plugin/src/beacon_kb_sample_plugin/: connector.py
tests/unit/: __init__.py  test_cli_stub.py  test_config.py  test_config_loader.py  test_facade_shell.py  test_models.py  test_progress.py  test_testing_fakes.py  test_tokens.py
tests/unit/generation/: test_abstention.py  test_answer.py  test_citations.py  test_prompts.py
tests/unit/indexing/: test_embedding.py  test_validation_embeddings.py
tests/unit/ingestion/: test_chunking.py  test_enrichment.py  test_filesystem_source.py
tests/unit/parsing/: __init__.py  test_base.py  test_html.py  test_markdown.py  test_pdf.py  test_registry.py
tests/unit/retrieval/: test_fusion_rerank_diversity.py  test_sparse_dense.py
tests/unit/storage/: test_fts_columns.py  test_fts_rebuild_crash_window.py  test_sqlite_store.py
